--- a/serviceDesk_client/src/main/resources/views/MemberShowTicketScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/MemberShowTicketScreen.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXTextArea?>
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
@@ -33,20 +34,28 @@
                   <AnchorPane maxHeight="64.0" maxWidth="200.0" minHeight="64.0" minWidth="200.0" prefHeight="64.0" prefWidth="200.0" HBox.hgrow="NEVER">
                      <children>
                         <Text fx:id="MyProfile" layoutY="30.0" onMouseClicked="#MyProfileClicked" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="navigation-menu-subtext" text="Мой профиль" textAlignment="RIGHT" wrappingWidth="136.0" />
-                        <ImageView fx:id="MyProfileImage" fitHeight="64.0" fitWidth="64.0" layoutX="136.0" onMouseClicked="#MyProfileClicked" pickOnBounds="true" preserveRatio="true" styleClass="navigation-menu-image">
+                        <ImageView fx:id="MyProfileImage" fitHeight="64.0" fitWidth="64.0" layoutX="136.0" onMouseClicked="#MyProfileClicked" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../images/character.png" />
                            </image>
+                           <styleClass>
+                              <String fx:value="navigation-menu-image" />
+                              <String fx:value="profile-image" />
+                           </styleClass>
                         </ImageView>
                      </children>
                   </AnchorPane>
                   <AnchorPane maxHeight="64.0" maxWidth="200.0" minHeight="64.0" minWidth="200.0" prefHeight="64.0" prefWidth="200.0">
                      <children>
                         <Text fx:id="MyOrganisation" layoutY="30.0" onMouseClicked="#MyOrganisationClicked" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="navigation-menu-subtext" text="Моя организация" textAlignment="RIGHT" wrappingWidth="136.0" />
-                        <ImageView fx:id="MyOrganisationImage" fitHeight="64.0" fitWidth="64.0" layoutX="136.0" onMouseClicked="#MyOrganisationClicked" pickOnBounds="true" preserveRatio="true" styleClass="navigation-menu-image">
+                        <ImageView fx:id="MyOrganisationImage" fitHeight="64.0" fitWidth="64.0" layoutX="136.0" onMouseClicked="#MyOrganisationClicked" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../images/three-friends.png" />
                            </image>
+                           <styleClass>
+                              <String fx:value="navigation-menu-image" />
+                              <String fx:value="organisation-image" />
+                           </styleClass>
                         </ImageView>
                      </children>
                   </AnchorPane>
@@ -70,7 +79,7 @@
                               <AnchorPane fx:id="TicketMainPane" maxWidth="760.0" minHeight="100.0" minWidth="760.0" prefHeight="100.0" prefWidth="760.0">
                                  <children>
                                     <Text fx:id="Title" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="big-description-text" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0" />
-                                    <JFXTextArea fx:id="Description" maxHeight="1500.0" maxWidth="600.0" minHeight="25.0" minWidth="600.0" prefColumnCount="0" prefHeight="25.0" wrapText="true" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="40.0" />
+                                    <JFXTextArea fx:id="Description" editable="false" maxHeight="1500.0" maxWidth="600.0" minHeight="25.0" minWidth="600.0" prefColumnCount="0" prefHeight="50.0" wrapText="true" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="40.0" />
                                  </children>
                               </AnchorPane>
                            </children>
