--- a/serviceDesk_client/src/main/resources/views/MemberShowTicketScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/MemberShowTicketScreen.fxml
@@ -69,17 +69,26 @@
             <Text layoutX="172.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-text" text="Просмотр обращения" />
             <AnchorPane layoutX="172.0" layoutY="64.0" maxHeight="550.0" prefHeight="550.0" prefWidth="800.0">
                <children>
-                  <ScrollPane maxWidth="680.0" prefHeight="200.0" prefWidth="200.0" vbarPolicy="ALWAYS" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="10.0">
+                  <ScrollPane fitToHeight="true" hbarPolicy="NEVER" maxWidth="680.0" prefHeight="200.0" prefWidth="200.0" vbarPolicy="ALWAYS" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="10.0">
                      <content>
-                        <VBox maxWidth="760.0" minHeight="520.0" minWidth="760.0" prefHeight="520.0" prefWidth="760.0">
+                        <VBox maxWidth="760.0" minHeight="520.0" minWidth="760.0" prefHeight="520.0" prefWidth="760.0" spacing="20.0">
                            <padding>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </padding>
                            <children>
-                              <AnchorPane fx:id="TicketMainPane" maxWidth="760.0" minHeight="100.0" minWidth="760.0" prefHeight="100.0" prefWidth="760.0">
+                              <AnchorPane fx:id="TicketMainPane" maxWidth="740.0" minHeight="100.0" minWidth="740.0" prefWidth="740.0" styleClass="pane-borders">
                                  <children>
                                     <Text fx:id="Title" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="big-description-text" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0" />
-                                    <JFXTextArea fx:id="Description" editable="false" maxHeight="1500.0" maxWidth="600.0" minHeight="25.0" minWidth="600.0" prefColumnCount="0" prefHeight="50.0" wrapText="true" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="40.0" />
+                                    <JFXTextArea fx:id="Description" editable="false" maxHeight="150.0" maxWidth="600.0" minHeight="150.0" minWidth="500.0" prefHeight="150.0" wrapText="true" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="150.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="40.0" />
+                                    <Text fx:id="CreatorRole" layoutY="188.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Представитель Заказчика" AnchorPane.leftAnchor="10.0" />
+                                    <Text fx:id="CreatorFullName" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Юзеревко Юзер Юзерович" textAlignment="CENTER" wrappingWidth="140.0" AnchorPane.leftAnchor="10.0" />
+                                    <ImageView fx:id="CreatorAvatar" fitHeight="64.0" fitWidth="64.0" layoutX="51.0" layoutY="71.0" pickOnBounds="true" preserveRatio="true" />
+                                 </children>
+                              </AnchorPane>
+                              <AnchorPane maxHeight="150.0" maxWidth="740.0" minHeight="100.0" minWidth="740.0" styleClass="pane-borders">
+                                 <children>
+                                    <JFXTextArea fx:id="Description1" maxHeight="150.0" maxWidth="600.0" minHeight="150.0" minWidth="500.0" prefHeight="150.0" promptText="Добавить комментарий" wrapText="true" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="150.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="20.0" />
+                                    <ImageView fx:id="CreatorAvatarComment" fitHeight="64.0" fitWidth="64.0" layoutX="50.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true" />
                                  </children>
                               </AnchorPane>
                            </children>
