--- a/serviceDesk_client/src/main/resources/views/DeveloperShowTicketScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/DeveloperShowTicketScreen.fxml
@@ -77,7 +77,7 @@
                                  <children>
                                     <Text fx:id="Title" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="big-description-text" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0" />
                                     <JFXTextArea fx:id="Description" editable="false" maxHeight="150.0" maxWidth="600.0" minHeight="150.0" minWidth="500.0" prefHeight="150.0" wrapText="true" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="150.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="40.0" />
-                                    <Text fx:id="CreatorRole" layoutY="188.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Представитель Заказчика" AnchorPane.leftAnchor="10.0" />
+                                    <Text fx:id="CreatorRole" layoutY="188.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Представитель Заказчика" textAlignment="CENTER" AnchorPane.leftAnchor="10.0" />
                                     <Text fx:id="CreatorFullName" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Юзеревко Юзер Юзерович" textAlignment="CENTER" wrappingWidth="140.0" AnchorPane.leftAnchor="10.0" />
                                     <ImageView fx:id="CreatorAvatar" fitHeight="64.0" fitWidth="64.0" layoutX="51.0" layoutY="71.0" pickOnBounds="true" preserveRatio="true" />
                                  </children>
