--- a/serviceDesk_client/src/main/resources/views/MemberProfileScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/MemberProfileScreen.fxml
@@ -62,23 +62,16 @@
             </HBox>
          </children></HBox>
    </top>
-   <bottom>
-      <ImageView fx:id="PlaceholderImage" fitHeight="782.0" fitWidth="1366.0" pickOnBounds="true" preserveRatio="true" visible="false" BorderPane.alignment="CENTER">
-         <image>
-            <Image url="@../images/MainScreenPlaceholder.png" />
-         </image>
-      </ImageView>
-   </bottom>
    <center>
       <Pane prefHeight="500.0" prefWidth="1100.0" BorderPane.alignment="CENTER">
          <children>
             <Text layoutX="133.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-text" text="Мой профиль" />
             <AnchorPane layoutX="133.0" layoutY="80.0" prefHeight="500.0" prefWidth="1100.0" styleClass="pane-borders">
                <children>
-                  <Button fx:id="ChangeProfileButton" defaultButton="true" mnemonicParsing="false" onAction="#ChangeProfile" styleClass="main-button" text="Редактировать профиль" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0" />
-                  <ImageView fx:id="Avatar" fitHeight="256.0" fitWidth="256.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="120.0" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="120.0" />
+                  <Button fx:id="ChangeProfileButton" defaultButton="true" mnemonicParsing="false" onAction="#ChangeProfile" styleClass="main-button" text="Редактировать профиль" AnchorPane.rightAnchor="125.0" AnchorPane.topAnchor="25.0" />
+                  <ImageView fx:id="Avatar" fitHeight="256.0" fitWidth="256.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="120.0" AnchorPane.leftAnchor="125.0" AnchorPane.topAnchor="120.0" />
                   <Button fx:id="LogOutButton" mnemonicParsing="false" onAction="#LogOut" styleClass="big-button" text="Выйти из аккаунта" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="450.0" AnchorPane.rightAnchor="450.0" />
-                  <Text fx:id="FullName" layoutX="57.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-text" text="Юзерко Юзер Юзерович" AnchorPane.leftAnchor="25.0" />
+                  <Text fx:id="FullName" layoutX="57.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-text" text="Юзерко Юзер Юзерович" AnchorPane.leftAnchor="125.0" />
                   <VBox layoutX="453.0" layoutY="123.0" prefHeight="256.0" prefWidth="200.0" spacing="10.0" AnchorPane.bottomAnchor="120.0" AnchorPane.leftAnchor="450.0" AnchorPane.topAnchor="123.0">
                      <children>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="big-description-text" text="Роль" underline="true">
@@ -108,7 +101,7 @@
             </AnchorPane>
          </children>
          <BorderPane.margin>
-            <Insets top="64.0" />
+            <Insets />
          </BorderPane.margin>
       </Pane>
    </center>
