--- a/serviceDesk_client/src/main/resources/views/MemberShowTicketScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/MemberShowTicketScreen.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
@@ -98,39 +99,35 @@
                </children></AnchorPane>
             <AnchorPane layoutX="1000.0" layoutY="64.0" maxHeight="550.0" maxWidth="306.0" minWidth="306.0" prefHeight="550.0" prefWidth="306.0" styleClass="pane-borders">
                <children>
-                  <VBox maxHeight="250.0" maxWidth="154.0" minWidth="154.0" prefHeight="250.0" prefWidth="154.0" spacing="15.0">
-                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="Статус" />
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="Тип обращения" />
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="Название ПО" />
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="Модуль ПО" />
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="Дата создания" />
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="Дата изменения" />
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="Дата обработки" />
-                     </children>
+                  <VBox fx:id="TicketInfo" layoutY="260.0" prefHeight="250.0" prefWidth="306.0" spacing="10.0" AnchorPane.topAnchor="0.0">
                      <padding>
-                        <Insets bottom="15.0" left="10.0" right="10.0" top="15.0" />
-                     </padding>
-                  </VBox>
-                  <VBox layoutX="153.0" maxHeight="250.0" maxWidth="154.0" minWidth="154.0" prefHeight="250.0" prefWidth="154.0" spacing="15.0">
-                     <padding>
-                        <Insets bottom="15.0" right="10.0" top="15.0" />
+                        <Insets left="10.0" right="10.0" top="10.0" />
                      </padding>
                      <children>
-                        <Text fx:id="Status" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="Зарегистрировано" />
-                        <Text fx:id="Category" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="Открыто" />
-                        <Text fx:id="Software" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="null" />
-                        <Text fx:id="Module" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="null" />
-                        <Text fx:id="CreationDate" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="null" />
-                        <Text fx:id="ChangeDate" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="null" />
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="null" />
-                     </children>
-                  </VBox>
-                  <VBox fx:id="UsersInfo" layoutY="260.0" prefHeight="250.0" prefWidth="306.0">
-                     <padding>
-                        <Insets left="10.0" right="10.0" top="20.0" />
-                     </padding>
-                     <children>
+                        <FlowPane maxWidth="308.0" minWidth="308.0" prefHeight="250.0" prefWidth="308.0" prefWrapLength="154.0" vgap="10.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="Статус" wrappingWidth="140.0" />
+                              <Text fx:id="Status" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="Зарегистрировано" wrappingWidth="140.0" />
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="Тип обращения" wrappingWidth="140.0" />
+                              <Text fx:id="Category" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="Открыто" wrappingWidth="140.0" />
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="Название ПО" wrappingWidth="140.0" />
+                              <Text fx:id="Software" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="null" wrappingWidth="140.0" />
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="Модуль ПО" wrappingWidth="140.0" />
+                              <Text fx:id="Module" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="null" wrappingWidth="140.0" />
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="Дата создания" wrappingWidth="140.0" />
+                              <Text fx:id="CreationDate" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="null" wrappingWidth="140.0" />
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="Дата изменения" wrappingWidth="140.0" />
+                              <Text fx:id="ChangeDate" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="null" wrappingWidth="140.0" />
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="Дата обработки" wrappingWidth="140.0" />
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-info" text="null" wrappingWidth="140.0" />
+                           </children>
+                           <opaqueInsets>
+                              <Insets />
+                           </opaqueInsets>
+                           <padding>
+                              <Insets bottom="10.0" />
+                           </padding>
+                        </FlowPane>
                         <BorderPane prefHeight="100.0" prefWidth="200.0">
                            <VBox.margin>
                               <Insets />
