--- a/serviceDesk_client/src/main/resources/views/LoginScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/LoginScreen.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -40,9 +41,12 @@
                   <Font size="20.0" />
                </font>
             </Button>
-            <Button fx:id="ForgotPasswordButton" layoutX="430.0" layoutY="113.0" mnemonicParsing="false" prefWidth="120.0" text="Забыли пароль?" underline="true" />
             <Line endX="399.0" endY="-0.19998931884765625" layoutX="151.0" layoutY="51.0" startX="-101.0" startY="-0.19998931884765625" stroke="#7d2e7e" strokeWidth="3.0" />
             <Line endX="399.0" endY="-0.19998931884765625" layoutX="151.0" layoutY="98.0" startX="-101.0" startY="-0.19998931884765625" stroke="#7d2e7e" strokeWidth="3.0" />
+            <Label fx:id="ForgotPasswordLabel" accessibleRole="BUTTON" layoutX="425.0" layoutY="111.0" onMouseClicked="#ForgotPasswordLabelClicked" prefHeight="26.0" prefWidth="121.0" text="Забыли пароль?" textFill="#7d2e7e" underline="true">
+               <font>
+                  <Font size="16.0" />
+               </font></Label>
          </children>
       </AnchorPane>
    </center>
