--- a/serviceDesk_client/src/main/resources/views/MemberOrganisationScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/MemberOrganisationScreen.fxml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -31,29 +29,13 @@
                   <AnchorPane maxHeight="64.0" maxWidth="200.0" minHeight="64.0" minWidth="200.0" prefHeight="64.0" prefWidth="200.0" HBox.hgrow="NEVER">
                      <children>
                         <Text fx:id="MyProfile" layoutY="30.0" onMouseClicked="#MyProfileClicked" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="navigation-menu-subtext" text="Мой профиль" textAlignment="RIGHT" wrappingWidth="136.0" />
-                        <ImageView fx:id="MyProfileImage" fitHeight="64.0" fitWidth="64.0" layoutX="136.0" onMouseClicked="#MyProfileClicked" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/character.png" />
-                           </image>
-                           <styleClass>
-                              <String fx:value="navigation-menu-image" />
-                              <String fx:value="profile-image" />
-                           </styleClass>
-                        </ImageView>
+                        <Circle fx:id="MyProfileCircle" fill="DODGERBLUE" layoutX="168.0" layoutY="32.0" radius="32.0" stroke="BLACK" strokeType="INSIDE" />
                      </children>
                   </AnchorPane>
                   <AnchorPane maxHeight="64.0" maxWidth="200.0" minHeight="64.0" minWidth="200.0" prefHeight="64.0" prefWidth="200.0">
                      <children>
                         <Text fx:id="MyOrganisation" layoutY="30.0" onMouseClicked="#MyOrganisationClicked" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="navigation-menu-subtext" text="Моя организация" textAlignment="RIGHT" wrappingWidth="136.0" />
-                        <ImageView fx:id="MyOrganisationImage" fitHeight="64.0" fitWidth="64.0" layoutX="136.0" onMouseClicked="#MyOrganisationClicked" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/three-friends.png" />
-                           </image>
-                           <styleClass>
-                              <String fx:value="navigation-menu-image" />
-                              <String fx:value="organisation-image" />
-                           </styleClass>
-                        </ImageView>
+                        <Circle fx:id="MyOrganisationCircle" fill="DODGERBLUE" layoutX="168.0" layoutY="32.0" radius="32.0" stroke="BLACK" strokeType="INSIDE" />
                      </children>
                   </AnchorPane>
                </children>
