--- a/serviceDesk_client/src/main/resources/views/MainStylesheet.css
+++ b/serviceDesk_client/src/main/resources/views/MainStylesheet.css
@@ -20,15 +20,25 @@
 .main-button {
     -fx-font-size: 20;
     -fx-background-color: #00D29D;
+    -fx-text-fill: #000000;
     -fx-pref-width: 250;
     -fx-pref-height: 50;
 }
 
+.main-button-v2 {
+    -fx-font-size: 16;
+    -fx-background-color: #00D29D;
+    -fx-text-fill: #000000;
+    -fx-pref-width: 250;
+    -fx-pref-height: 45;
+}
+
 .big-button {
     -fx-font-size: 16;
-    -fx-background-color: #00D0D0;
+    -fx-background-color: #DBE2E7;
+    -fx-text-fill: #000000;
     -fx-pref-width: 250;
-    -fx-pref-height: 30;
+    -fx-pref-height: 45;
 }
 
 .title-text {
