--- a/serviceDesk_client/src/main/resources/views/DeveloperTicketsScreen_v2.fxml
+++ b/serviceDesk_client/src/main/resources/views/DeveloperTicketsScreen_v2.fxml
@@ -13,37 +13,43 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" styleClass="main-pane" stylesheets="@MainStylesheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="team.dna2.serviceDesk_client.controllers.MemberTicketsScreenController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" styleClass="main-pane" stylesheets="@MainStylesheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="team.dna2.serviceDesk_client.controllers.DeveloperTicketsScreenController">
     <top>
-        <HBox alignment="CENTER_LEFT" maxHeight="96.0" maxWidth="1366.0" minHeight="64.0" minWidth="1366.0" prefHeight="64.0" prefWidth="1366.0" styleClass="navigation-menu" BorderPane.alignment="CENTER_LEFT">
+        <HBox alignment="CENTER_LEFT" maxHeight="64.0" maxWidth="1366.0" minHeight="64.0" minWidth="1366.0" prefHeight="64.0" prefWidth="1366.0" styleClass="navigation-menu" BorderPane.alignment="CENTER_LEFT">
             <children>
                 <Text fx:id="Logo" fill="WHITE" onMouseClicked="#LogoClicked" styleClass="logo" text="Service-Desk" textAlignment="CENTER" wrappingWidth="240.0">
                     <font>
                         <Font name="System Bold Italic" size="36.0" />
                     </font>
                 </Text>
-                <AnchorPane prefHeight="64.0" prefWidth="733.0" />
+                <Text fx:id="Tickets" fill="WHITE" onMouseClicked="#TicketsClicked" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="navigation-menu-text" text="Обращения" textAlignment="CENTER" wrappingWidth="200.0">
+                    <font>
+                        <Font size="36.0" />
+                    </font>
+                </Text>
+                <Text fx:id="Compendiums" fill="WHITE" layoutX="250.0" layoutY="54.0" onMouseClicked="#CompendiumsClicked" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="navigation-menu-text" text="Справочники" textAlignment="CENTER" wrappingWidth="200.0">
+                    <font>
+                        <Font size="36.0" />
+                    </font>
+                </Text>
+                <Text fx:id="Statistics" fill="WHITE" layoutX="450.0" layoutY="54.0" onMouseClicked="#StatisticsClicked" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="navigation-menu-text" text="Статистика" textAlignment="CENTER" wrappingWidth="200.0">
+                    <font>
+                        <Font size="36.0" />
+                    </font>
+                </Text>
+                <AnchorPane prefHeight="64.0" prefWidth="579.0" />
                 <HBox alignment="BASELINE_RIGHT" maxHeight="64.0" maxWidth="400.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="64.0" prefWidth="400.0" HBox.hgrow="NEVER">
                     <children>
                         <AnchorPane maxHeight="64.0" maxWidth="200.0" minHeight="64.0" minWidth="200.0" prefHeight="64.0" prefWidth="200.0" HBox.hgrow="NEVER">
                             <children>
-                                <Text fx:id="MyProfile" layoutY="30.0" onMouseClicked="#MyProfileClicked" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="navigation-menu-subtext" text="Мой профиль" textAlignment="CENTER" wrappingWidth="136.0" />
+                                <Text fx:id="MyProfile" layoutY="30.0" onMouseClicked="#MyProfileClicked" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="navigation-menu-subtext" text="Мой профиль" textAlignment="RIGHT" wrappingWidth="136.0" />
                                 <Circle fx:id="MyProfileCircle" fill="DODGERBLUE" layoutX="168.0" layoutY="32.0" radius="32.0" stroke="BLACK" strokeType="INSIDE" />
-                            </children>
-                        </AnchorPane>
-                        <AnchorPane maxHeight="64.0" maxWidth="200.0" minHeight="64.0" minWidth="200.0" prefHeight="64.0" prefWidth="200.0">
-                            <children>
-                                <Text fx:id="MyOrganisation" layoutY="30.0" onMouseClicked="#MyOrganisationClicked" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="navigation-menu-subtext" text="Моя организация" textAlignment="CENTER" wrappingWidth="136.0" />
-                                <Circle fx:id="MyOrganisationCircle" fill="DODGERBLUE" layoutX="168.0" layoutY="32.0" radius="32.0" stroke="BLACK" strokeType="INSIDE" />
                             </children>
                         </AnchorPane>
                     </children>
                 </HBox>
             </children></HBox>
     </top>
-    <center>
-       
-    </center>
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
