Измена шрифтов в таблице и размеров полей таблицы

--- a/serviceDesk_client/src/main/resources/views/MainStylesheet.css
+++ b/serviceDesk_client/src/main/resources/views/MainStylesheet.css
@@ -179,4 +179,11 @@
 .table-view:row-selection .column-header-background .nested-column-header .table-column .label .text
 {
     -fx-fill: #7d2e7e;
+    -fx-font-size: 14px;
+}
+
+.table-view .table-cell
+{
+    -fx-text-fill: black;
+    -fx-font-size: 14px;
 }
